<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="182dp"
        android:layout_height="419dp"
        android:layout_marginStart="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/team2"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="65sp" />

        <Button
            android:id="@+id/point3b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAdd3"
            android:text="@string/point3" />

        <Button
            android:id="@+id/point2b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAdd2"
            android:text="@string/point2" />

        <Button
            android:id="@+id/point1b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnAdd1"
            android:text="@string/point1" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="186dp"
        android:layout_height="418dp"
        android:layout_marginStart="4dp"
        android:orientation="vertical"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/teamb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/team1"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/scorea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="65sp" />

        <Button
            android:id="@+id/point3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAdd3a"
            android:text="@string/point3" />

        <Button
            android:id="@+id/point2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAdd2a"
            android:text="@string/point2" />

        <Button
            android:id="@+id/point1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnAdd1a"
            android:text="@string/point1" />

    </LinearLayout>


    <Button
        android:id="@+id/res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="156dp"
        android:onClick="btnReset"
        android:text="Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>