<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/show"
        android:layout_width="459dp"
        android:layout_height="739dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/_8c60ca187604c0d__1_"
        tools:layout_editor_absoluteX="-15dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="404dp"
        android:layout_height="115dp"
        android:layout_marginBottom="560dp"
        android:text="@string/happy"
        android:textSize="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.29"
        tools:layout_editor_absoluteX="16dp" />

    ]<TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:text="@string/my"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>